# srt-linter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
src/: lib.rs  main.rs
src/frontend/: lexer.rs  parser.rs
src/tui/: mod.rs
src/utils/: logging.rs
tests/: lexer_test.rs
