[package]
name = "srt-linter"
version = "0.1.0"
description = "Look for issues inside SubRip text (.srt) files"
authors = ["furtidev <furtidev@tuta.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/furtidev/srt-linter"
keywords = ["lint", "srt", "subtitle"]
categories = ["command-line-utilities", "parser-implementations"]
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
